Accessibility concerns - immediate child of body tag must be a div with class - landmarking will assist accessibility

--- a/docs/qr-code/style.css
+++ b/docs/qr-code/style.css
@@ -21,11 +21,11 @@ body{
 }
 
 .container{
-    padding-inline: 2rem;
+    padding: 2rem;
     background-color: hsl(var(--clr-gray));
 }
 
-.container .qr-card{
+.qr-card{
     display: flex;
     flex-direction: column;
     align-items: center;
