--- a/docs/qr-code/style.css
+++ b/docs/qr-code/style.css
@@ -26,10 +26,7 @@ body{
 }
 
 .qr-card{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
+    max-width: max-content;
     background-color: hsl(var(--clr-white));
     border-radius: 1.2rem;
 }
