center the qr-code - make the container a flex container and direction column

--- a/docs/qr-code/style.css
+++ b/docs/qr-code/style.css
@@ -21,6 +21,9 @@ body{
 }
 
 .container{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     padding: 2rem;
     background-color: hsl(var(--clr-gray));
 }
